--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,5 +21,6 @@
     "home_third_swiper_text": "Дополнительная скидка 20% на",
     "add_like": "Добавит в избранные",
     "remove_like": "Убрать из избранных",
-    "home_fourth_swiper_text": "все с бесплатной доставкой"
+    "home_fourth_swiper_text": "все с бесплатной доставкой",
+    "nothing": ""
 }
