--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -21,5 +21,6 @@
     "home_third_swiper_text": "Extra 20% off for",
     "add_like": "Add to like",
     "remove_like": "Remove from like",
-    "home_fourth_swiper_text": "All With Free Shipping"
+    "home_fourth_swiper_text": "All With Free Shipping",
+    "nothing": ""
 } 
